--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "MASTER-MD",
-  "description": "Javascript WhatsApp bot made by 𝚪𝐔𝐒𝚮-𝚳𝚫𝐒𝚻𝚵𝚪",
+  "description": "Javascript WhatsApp bot made by Rush Master",
   "logo": "https://cdn.ironman.my.id/i/5b21iy.jpg",
   "keywords": ["bot"],
   "success_url": "/",
